# sinotrack-alert-monitor

./: README.md  pyproject.toml  termux-runner.sh
src/: .env  config.py  main.py  state.py  utils.py
src/framework/: helpers.py  scraper_builder.py  scraper_runner.py
