[tool.poetry]
name = "sinotrack-alert-monitor"
version = "0.1.0"
description = ""
authors = ["kpliuta <9212935+kpliuta@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
