[tool.poetry]
name = "sinotrack-alert-monitor"
version = "0.1.0"
description = ""
authors = ["kpliuta <9212935+kpliuta@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
pyyaml = "^6.0.2"

# TODO: specify a version of termux-web-scraper
termux-web-scraper = { git = "https://github.com/kpliuta/termux-web-scraper.git", rev = "7e02b6eb" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
